# poliappelli

./: .env.sample  .gitignore  Makefile  Pipfile  README.md  __main__.py  cli.ts  deps.ts  esami.md  import_map.json  install.py  lock.json  main.ts  pyproject.toml  requirements.txt  scraper.ts  script.py  scripts.yaml  setup.py
poliappelli/: __init__.py  __main__.py  drivers.py  parser.py  scaper.py
src/: main.ts  scraper.ts  scraper_test.ts
tests/: scraper_test.ts
