[tool.poetry]
name = "poliappelli"
version = "0.7.0"
description="Script for PoliTo exams"
authors=["Gabriele Belluardo <gabriele.belluardo@outlook.it>"]
readme="README.md"
license="GPL-3.0-or-later"
repository="https://gitlab.com/gabelluardo/poliappelli"
classifiers=[
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Topic :: Utilities",
]

[tool.poetry.scripts]
poliappelli = "poliappelli.__main__:run"

[tool.poetry.dependencies]
python = "^3.6"
tqdm = "^4.40.0"
selenium = "^3.141.0"
beautifulsoup4 = "^4.8.1"
beautifultable = "^0.8.0"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
autopep8 = "^1.4.4"
PyInstaller = "^3.5"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"